--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,192 @@
 @import "tailwindcss";
+@import "tw-animate-css";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --background: oklch(1 0 0);
+    --foreground: oklch(0.2135 0.0158 244.4904);
+    --card: oklch(0.8328 0.0088 196.9873);
+    --card-foreground: oklch(0.2135 0.0158 244.4904);
+    --popover: oklch(1 0 0);
+    --popover-foreground: oklch(0.2135 0.0158 244.4904);
+    --primary: oklch(0.582 0.1472 246.377);
+    --primary-foreground: oklch(1 0 0);
+    --secondary: oklch(0.2135 0.0158 244.4904);
+    --secondary-foreground: oklch(1 0 0);
+    --muted: oklch(0.7772 0.0042 286.3015);
+    --muted-foreground: oklch(0.2135 0.0158 244.4904);
+    --accent: oklch(0.7809 0.0623 251.6216);
+    --accent-foreground: oklch(0.582 0.1472 246.377);
+    --destructive: oklch(0.5476 0.2199 27.3711);
+    --destructive-foreground: oklch(1 0 0);
+    --border: oklch(0.7918 0.0371 231.2568);
+    --input: oklch(0.832 0.0224 230.6062);
+    --ring: oklch(0.5919 0.1447 244.6197);
+    --chart-1: oklch(0.582 0.1472 246.377);
+    --chart-2: oklch(0.5857 0.1304 161.0013);
+    --chart-3: oklch(0.7407 0.1522 79.6814);
+    --chart-4: oklch(0.5999 0.1535 151.9005);
+    --chart-5: oklch(0.5059 0.1878 10.862);
+    --sidebar: oklch(0.8328 0.0088 196.9873);
+    --sidebar-foreground: oklch(0.2135 0.0158 244.4904);
+    --sidebar-primary: oklch(0.582 0.1472 246.377);
+    --sidebar-primary-foreground: oklch(1 0 0);
+    --sidebar-accent: oklch(0.7809 0.0623 251.6216);
+    --sidebar-accent-foreground: oklch(0.582 0.1472 246.377);
+    --sidebar-border: oklch(0.7837 0.0305 237.0264);
+    --sidebar-ring: oklch(0.5919 0.1447 244.6197);
+    --font-sans: Poppins, ui-sans-serif, sans-serif, system-ui;
+    --font-serif: Georgia, serif;
+    --font-mono: Menlo, monospace;
+    --radius: 1.3rem;
+    --shadow-x: 0px;
+    --shadow-y: 2px;
+    --shadow-blur: 0px;
+    --shadow-spread: 0px;
+    --shadow-opacity: 0;
+    --shadow-color: #0c84cd;
+    --shadow-2xs: 0px 2px 0px 0px hsl(202.6943 88.9401% 42.549% / 0);
+    --shadow-xs: 0px 2px 0px 0px hsl(202.6943 88.9401% 42.549% / 0);
+    --shadow-sm:
+        0px 2px 0px 0px hsl(202.6943 88.9401% 42.549% / 0),
+        0px 1px 2px -1px hsl(202.6943 88.9401% 42.549% / 0);
+    --shadow:
+        0px 2px 0px 0px hsl(202.6943 88.9401% 42.549% / 0),
+        0px 1px 2px -1px hsl(202.6943 88.9401% 42.549% / 0);
+    --shadow-md:
+        0px 2px 0px 0px hsl(202.6943 88.9401% 42.549% / 0),
+        0px 2px 4px -1px hsl(202.6943 88.9401% 42.549% / 0);
+    --shadow-lg:
+        0px 2px 0px 0px hsl(202.6943 88.9401% 42.549% / 0),
+        0px 4px 6px -1px hsl(202.6943 88.9401% 42.549% / 0);
+    --shadow-xl:
+        0px 2px 0px 0px hsl(202.6943 88.9401% 42.549% / 0),
+        0px 8px 10px -1px hsl(202.6943 88.9401% 42.549% / 0);
+    --shadow-2xl: 0px 2px 0px 0px hsl(202.6943 88.9401% 42.549% / 0);
+    --tracking-normal: 0em;
+    --spacing: 0.25rem;
+}
+
+.dark {
+    --background: oklch(0 0 0);
+    --foreground: oklch(0.7906 0.0089 225.1109);
+    --card: oklch(0.2097 0.008 274.5332);
+    --card-foreground: oklch(0.8853 0 0);
+    --popover: oklch(0 0 0);
+    --popover-foreground: oklch(0.7906 0.0089 225.1109);
+    --primary: oklch(0.5779 0.1446 245.9158);
+    --primary-foreground: oklch(1 0 0);
+    --secondary: oklch(0.8173 0.0169 221.1161);
+    --secondary-foreground: oklch(0.2135 0.0158 244.4904);
+    --muted: oklch(0.209 0 0);
+    --muted-foreground: oklch(0.4806 0.0074 255.516);
+    --accent: oklch(0.2184 0.0393 243.587);
+    --accent-foreground: oklch(0.5779 0.1446 245.9158);
+    --destructive: oklch(0.5476 0.2199 27.3711);
+    --destructive-foreground: oklch(1 0 0);
+    --border: oklch(0.2348 0.0041 264.4886);
+    --input: oklch(0.2629 0.0243 246.3179);
+    --ring: oklch(0.5919 0.1447 244.6197);
+    --chart-1: oklch(0.582 0.1472 246.377);
+    --chart-2: oklch(0.5857 0.1304 161.0013);
+    --chart-3: oklch(0.7407 0.1522 79.6814);
+    --chart-4: oklch(0.5999 0.1535 151.9005);
+    --chart-5: oklch(0.5059 0.1878 10.862);
+    --sidebar: oklch(0.2097 0.008 274.5332);
+    --sidebar-foreground: oklch(0.8853 0 0);
+    --sidebar-primary: oklch(0.5919 0.1447 244.6197);
+    --sidebar-primary-foreground: oklch(1 0 0);
+    --sidebar-accent: oklch(0.2184 0.0393 243.587);
+    --sidebar-accent-foreground: oklch(0.5779 0.1446 245.9158);
+    --sidebar-border: oklch(0.3278 0.0188 245.2388);
+    --sidebar-ring: oklch(0.5919 0.1447 244.6197);
+    --font-sans: Poppins, ui-sans-serif, sans-serif, system-ui;
+    --font-serif: Georgia, serif;
+    --font-mono: Menlo, monospace;
+    --radius: 1.3rem;
+    --shadow-x: 0px;
+    --shadow-y: 2px;
+    --shadow-blur: 0px;
+    --shadow-spread: 0px;
+    --shadow-opacity: 0;
+    --shadow-color: #0c84cd;
+    --shadow-2xs: 0px 2px 0px 0px hsl(202.6943 88.9401% 42.549% / 0);
+    --shadow-xs: 0px 2px 0px 0px hsl(202.6943 88.9401% 42.549% / 0);
+    --shadow-sm:
+        0px 2px 0px 0px hsl(202.6943 88.9401% 42.549% / 0),
+        0px 1px 2px -1px hsl(202.6943 88.9401% 42.549% / 0);
+    --shadow:
+        0px 2px 0px 0px hsl(202.6943 88.9401% 42.549% / 0),
+        0px 1px 2px -1px hsl(202.6943 88.9401% 42.549% / 0);
+    --shadow-md:
+        0px 2px 0px 0px hsl(202.6943 88.9401% 42.549% / 0),
+        0px 2px 4px -1px hsl(202.6943 88.9401% 42.549% / 0);
+    --shadow-lg:
+        0px 2px 0px 0px hsl(202.6943 88.9401% 42.549% / 0),
+        0px 4px 6px -1px hsl(202.6943 88.9401% 42.549% / 0);
+    --shadow-xl:
+        0px 2px 0px 0px hsl(202.6943 88.9401% 42.549% / 0),
+        0px 8px 10px -1px hsl(202.6943 88.9401% 42.549% / 0);
+    --shadow-2xl: 0px 2px 0px 0px hsl(202.6943 88.9401% 42.549% / 0);
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+    --color-background: var(--background);
+    --color-foreground: var(--foreground);
+    --color-card: var(--card);
+    --color-card-foreground: var(--card-foreground);
+    --color-popover: var(--popover);
+    --color-popover-foreground: var(--popover-foreground);
+    --color-primary: var(--primary);
+    --color-primary-foreground: var(--primary-foreground);
+    --color-secondary: var(--secondary);
+    --color-secondary-foreground: var(--secondary-foreground);
+    --color-muted: var(--muted);
+    --color-muted-foreground: var(--muted-foreground);
+    --color-accent: var(--accent);
+    --color-accent-foreground: var(--accent-foreground);
+    --color-destructive: var(--destructive);
+    --color-destructive-foreground: var(--destructive-foreground);
+    --color-border: var(--border);
+    --color-input: var(--input);
+    --color-ring: var(--ring);
+    --color-chart-1: var(--chart-1);
+    --color-chart-2: var(--chart-2);
+    --color-chart-3: var(--chart-3);
+    --color-chart-4: var(--chart-4);
+    --color-chart-5: var(--chart-5);
+    --color-sidebar: var(--sidebar);
+    --color-sidebar-foreground: var(--sidebar-foreground);
+    --color-sidebar-primary: var(--sidebar-primary);
+    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+    --color-sidebar-accent: var(--sidebar-accent);
+    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+    --color-sidebar-border: var(--sidebar-border);
+    --color-sidebar-ring: var(--sidebar-ring);
+
+    --font-sans: var(--font-sans);
+    --font-mono: var(--font-mono);
+    --font-serif: var(--font-serif);
+
+    --radius-sm: calc(var(--radius) - 4px);
+    --radius-md: calc(var(--radius) - 2px);
+    --radius-lg: var(--radius);
+    --radius-xl: calc(var(--radius) + 4px);
+
+    --shadow-2xs: var(--shadow-2xs);
+    --shadow-xs: var(--shadow-xs);
+    --shadow-sm: var(--shadow-sm);
+    --shadow: var(--shadow);
+    --shadow-md: var(--shadow-md);
+    --shadow-lg: var(--shadow-lg);
+    --shadow-xl: var(--shadow-xl);
+    --shadow-2xl: var(--shadow-2xl);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@layer base {
+    * {
+        @apply border-border outline-ring/50;
+    }
+    body {
+        @apply bg-background text-foreground;
+    }
 }
